--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<!-- Font-Awesome -->
     <link href="assets/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 	<!-- Lightbox -->
 	<link href="assets/lightbox/css/lightbox.css" rel="stylesheet">
     <!-- Text Rotator-->
@@ -203,35 +204,35 @@
 
                           <div class="col-md-4 wp2 item delay-1s">
                             <div class="icon">
-                              <!-- Icon -->
+                              <i class="devicon-express-original devicon-og"></i><!-- Icon -->
                             </div>
                             <h2>EXPRESS</h2><!-- Title -->
                           </div>
 
                           <div class="col-md-4 wp2 item delay-1s">
                             <div class="icon">
-                              <!-- Icon -->
+                              <i class="devicon-mongodb-plain-wordmark devicon-og"></i><!-- Icon -->
                             </div>
                             <h2>MongoDB</h2><!-- Title -->
                           </div>
 
                           <div class="col-md-4 wp2 item delay-1s">
                             <div class="icon">
-                              <!-- Icon -->
+                              <i class="fas fa-database"></i><!-- Icon -->
                             </div>
                             <h2>SQL</h2><!-- Title -->
                           </div>
 
                           <div class="col-md-4 wp2 item delay-1s">
                             <div class="icon">
-                              <!-- Icon -->
+                              <i class="devicon-jquery-plain-wordmark devicon-og"></i><!-- Icon -->
                             </div>
                             <h2>Jquery</h2><!-- Title -->
                           </div>
 
                           <div class="col-md-4 wp2 item delay-1s">
                             <div class="icon">
-                              <span class="glyphicon glyphicon-camera"></span> <!-- Icon -->
+                              <i class="devicon-bootstrap-plain devicon-og"></i><!-- Icon -->
                               </div>
                             <h2>Bootstrap</h2><!-- Title -->
                           </div>
@@ -255,7 +256,7 @@
 		    <!-- Headline -->
             <div class="row">
               <h1 class="arrow">
-                Recent <span>Porojects</span>
+                Recent <span>Projects</span>
               </h1>
             </div>
           </div>
@@ -268,7 +269,7 @@
           <div class="col-md-3 col-sm-6">
               <div class="overlay-effect effects clearfix">
                   <div class="img">
-                      <a href="img/portfolio/portfolio-01-large.jpg" data-lightbox="roadtrip" title="Project One - Lorem Ipsum"><img class="grayscale" src="img/portfolio/portfolio-01-thumbnail.jpg" alt="Portfolio Item"></a>
+                      <a href="img/portfolio/tic-tac-toe.png" data-lightbox="roadtrip" title="Project One - Lorem Ipsum"><img class="grayscale" src="img/portfolio/tic-tac-toe-copy.png" alt="Portfolio Item"></a>
                   </div>
               </div>
           </div>
@@ -278,7 +279,7 @@
           <div class="col-md-3 col-sm-6">
               <div class="overlay-effect effects clearfix">
                   <div class="img">
-                      <a href="img/portfolio/portfolio-02-large.jpg" data-lightbox="roadtrip" title="Project Two - Lorem Ipsum"><img class="grayscale" src="img/portfolio/portfolio-02-thumbnail.jpg" alt="Portfolio Item"></a>
+                      <a href="img/portfolio/goal-project.png" data-lightbox="roadtrip" title="Project Two - Lorem Ipsum"><img class="grayscale" src="img/portfolio/goal-project-copy.png" alt="Portfolio Item"></a>
                   </div>
               </div>
           </div>
@@ -288,7 +289,7 @@
           <div class="col-md-3 col-sm-6">
               <div class="overlay-effect effects clearfix">
                   <div class="img">
-                      <a href="img/portfolio/portfolio-03-large.jpg" data-lightbox="roadtrip" title="Project Three - Lorem Ipsum"><img class="grayscale" src="img/portfolio/portfolio-03-thumbnail.jpg" alt="Portfolio Item"></a>
+                      <a href="img/portfolio/survey-project.png" data-lightbox="roadtrip" title="Project Three - Lorem Ipsum"><img class="grayscale" src="img/portfolio/survey-project-copy.png" alt="Portfolio Item"></a>
                   </div>
               </div>
           </div>
@@ -298,50 +299,10 @@
           <div class="col-md-3 col-sm-6 ">
               <div class="overlay-effect effects clearfix">
                   <div class="img">
-                      <a href="img/portfolio/portfolio-04-large.jpg" data-lightbox="roadtrip" title="Project Four - Lorem Ipsum"><img class="grayscale" src="img/portfolio/portfolio-04-thumbnail.jpg" alt="Portfolio Item"></a>
+                      <a href="img/portfolio/capstone.png" data-lightbox="roadtrip" title="Project Four - Lorem Ipsum"><img class="grayscale" src="img/portfolio/capstone-copy.png" alt="Portfolio Item"></a>
                   </div>
               </div>
           </div>
-  	    <!-- PORTFOLIO ITEM END -->
-
-          <!-- PORTFOLIO ITEM 5 -->
-          <!-- <div class="col-md-3 col-sm-6 ">
-              <div class="overlay-effect effects clearfix">
-                  <div class="img">
-                      <a href="img/portfolio/portfolio-05-large.jpg" data-lightbox="roadtrip" title="Project Five - Lorem Ipsum"><img class="grayscale" src="img/portfolio/portfolio-05-thumbnail.jpg" alt="Portfolio Item"></a>
-                  </div>
-              </div>
-          </div> -->
-  	    <!-- PORTFOLIO ITEM END -->
-
-  	    <!-- PORTFOLIO ITEM 6 -->
-          <!-- <div class="col-md-3 col-sm-6">
-              <div class="overlay-effect effects clearfix">
-                  <div class="img">
-                      <a href="img/portfolio/portfolio-06-large.jpg" data-lightbox="roadtrip" title="Project Six - Lorem Ipsum"><img class="grayscale" src="img/portfolio/portfolio-06-thumbnail.jpg" alt="Portfolio Item"></a>
-                  </div>
-              </div>
-          </div> -->
-  	    <!-- PORTFOLIO ITEM END -->
-
-  		<!-- PORTFOLIO ITEM 7 -->
-          <!-- <div class="col-md-3 col-sm-6">
-              <div class="overlay-effect effects clearfix">
-                  <div class="img">
-                      <a href="img/portfolio/portfolio-07-large.jpg" data-lightbox="roadtrip" title="Project Seven - Lorem Ipsum"><img class="grayscale" src="img/portfolio/portfolio-07-thumbnail.jpg" alt="Portfolio Item"></a>
-                  </div>
-              </div>
-          </div> -->
-  	    <!-- PORTFOLIO ITEM END -->
-
-  		<!-- PORTFOLIO ITEM 8 -->
-          <!-- <div class="col-md-3 col-sm-6">
-              <div class="overlay-effect effects clearfix">
-                  <div class="img">
-                      <a href="img/portfolio/portfolio-08-large.jpg" data-lightbox="roadtrip" title="Project Eight - Lorem Ipsum"><img class="grayscale" src="img/portfolio/portfolio-08-thumbnail.jpg" alt="Portfolio Item"></a>
-                  </div>
-              </div>
-          </div> -->
   	    <!-- PORTFOLIO ITEM END -->
         </div><!--/row-->
       </div><!--/.container-->
