--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<!-- Animations -->
     <link href="css/animate.css" rel="stylesheet">
 	<!-- Custom Favicon -->
-	<link href="img/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+	<link href="img/favicon.png" rel="shortcut icon" type="image/x-icon" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -53,8 +53,8 @@
 						<!-- <a href="index.html#service"><i class="fa fa-fw fa-globe"></i><span>Service</span></a> -->
 						<a href="index.html#portfolio"><i class="fa fa-fw fa-picture-o"></i><span>Portfolio</span></a>
 						<!-- <a href="index.html#blog"><i class="fa fa-fw fa-rss"></i><span>Blog</span></a> -->
-            <a href="index.html#contact"><i class="fa fa-fw fa-envelope-o"></i><span>Contact</span></a>
-						<a href="resume-link"><i class="fas fa-file-alt"></i><span>Resume</span></a>
+            <a href="index.html#contact"><i class="fa fa-paper-plane"></i><span>Contact</span></a>
+						<a href="./Resume_Luis_Soto.pdf"><i class="fas fa-file-alt"></i><span>Resume</span></a>
 					</div>
 				</nav>
 			    </div>
@@ -269,9 +269,27 @@
           <div class="col-md-3 col-sm-6">
               <div class="overlay-effect effects clearfix">
                   <div class="img">
-                      <a href="img/portfolio/tic-tac-toe.png" data-lightbox="roadtrip" title="Project One - Lorem Ipsum"><img class="grayscale" src="img/portfolio/tic-tac-toe-copy.png" alt="Portfolio Item"></a>
+                      <a href="img/portfolio/tic-tac-toe.png" data-lightbox="roadtrip" title="Project One - Tic-Tac-Toe"><img class="grayscale" src="img/portfolio/tic-tac-toe-copy.png" alt="Portfolio Item"></a>
                   </div>
               </div>
+
+              <div class="container-fluid text-center">
+                <!-- <div class="row"> -->
+                  <div class="col-sm-6">
+                    <div class="icon">
+                    <i class="devicon-github-plain"></i>
+                  </div>
+                    <h5><a href="https://github.com/luissoldevilla/tic-tac-toe-game-luis">Client Repo</a></h5>
+                  </div>
+                  <div class="col-sm-6">
+                    <div class="icon">
+                    <i class="fas fa-globe"></i>
+                  </div>
+                    <h5><a href="https://luissoldevilla.github.io/tic-tac-toe-game-luis/">Live Site</a></h5>
+                  </div>
+                <!-- </div> -->
+              </div>
+
           </div>
   	    <!-- PORTFOLIO ITEM END -->
 
@@ -279,9 +297,35 @@
           <div class="col-md-3 col-sm-6">
               <div class="overlay-effect effects clearfix">
                   <div class="img">
-                      <a href="img/portfolio/goal-project.png" data-lightbox="roadtrip" title="Project Two - Lorem Ipsum"><img class="grayscale" src="img/portfolio/goal-project-copy.png" alt="Portfolio Item"></a>
+                      <a href="img/portfolio/goal-project.png" data-lightbox="roadtrip" title="Project Two - Goal Tracker"><img class="grayscale" src="img/portfolio/goal-project-copy.png" alt="Portfolio Item"></a>
                   </div>
               </div>
+
+              <div class="container-fluid text-center">
+                <!-- <div class="row"> -->
+                  <div class="col-sm-4">
+                    <div class="icon">
+                      <i class="devicon-github-plain"></i>
+                  </div>
+                    <h5><a href="https://github.com/luissoldevilla/goal-pomodoro-project-client">Client</a></h5>
+                  </div>
+
+                  <div class="col-sm-4">
+                    <div class="icon">
+                      <i class="devicon-github-plain"></i>
+                  </div>
+                    <h5><a href="https://github.com/luissoldevilla/goal-pomodoro-project-api">API</a></h5>
+                  </div>
+
+                  <div class="col-sm-4">
+                    <div class="icon">
+                    <i class="fas fa-globe"></i>
+                  </div>
+                    <h5><a href="https://luissoldevilla.github.io/goal-pomodoro-project-client/">Live Site</a></h5>
+                  </div>
+                <!-- </div> -->
+              </div>
+
           </div>
   	    <!-- PORTFOLIO ITEM END -->
 
@@ -289,19 +333,71 @@
           <div class="col-md-3 col-sm-6">
               <div class="overlay-effect effects clearfix">
                   <div class="img">
-                      <a href="img/portfolio/survey-project.png" data-lightbox="roadtrip" title="Project Three - Lorem Ipsum"><img class="grayscale" src="img/portfolio/survey-project-copy.png" alt="Portfolio Item"></a>
+                      <a href="img/portfolio/survey-project.png" data-lightbox="roadtrip" title="Project Three - Survey Engine"><img class="grayscale" src="img/portfolio/survey-project-copy.png" alt="Portfolio Item"></a>
                   </div>
               </div>
+
+              <div class="container-fluid text-center">
+                <!-- <div class="row"> -->
+                  <div class="col-sm-4">
+                    <div class="icon">
+                      <i class="devicon-github-plain"></i>
+                  </div>
+                    <h5><a href="https://github.com/the-console-dawgs/front-end-client">Client</a></h5>
+                  </div>
+
+                  <div class="col-sm-4">
+                    <div class="icon">
+                      <i class="devicon-github-plain"></i>
+                  </div>
+                    <h5><a href="https://github.com/the-console-dawgs/back-end-repo">API</a></h5>
+                  </div>
+
+                  <div class="col-sm-4">
+                    <div class="icon">
+                    <i class="fas fa-globe"></i>
+                  </div>
+                    <h5><a href="https://the-console-dawgs.github.io/front-end-client/">Live Site</a></h5>
+                  </div>
+                <!-- </div> -->
+              </div>
+
           </div>
   	    <!-- PORTFOLIO ITEM END -->
 
   		<!-- PORTFOLIO ITEM 4 -->
-          <div class="col-md-3 col-sm-6 ">
+          <div class="col-md-3 col-sm-6">
               <div class="overlay-effect effects clearfix">
                   <div class="img">
-                      <a href="img/portfolio/capstone.png" data-lightbox="roadtrip" title="Project Four - Lorem Ipsum"><img class="grayscale" src="img/portfolio/capstone-copy.png" alt="Portfolio Item"></a>
+                      <a href="img/portfolio/capstone.png" data-lightbox="roadtrip" title="Project Four - Class Tool"><img class="grayscale" src="img/portfolio/capstone-copy.png" alt="Portfolio Item"></a>
                   </div>
               </div>
+
+              <div class="container-fluid text-center">
+                <!-- <div class="row"> -->
+                  <div class="col-sm-4">
+                    <div class="icon">
+                      <i class="devicon-github-plain"></i>
+                  </div>
+                    <h5><a href="https://github.com/luissoldevilla/class-tool-front-end">Client</a></h5>
+                  </div>
+
+                  <div class="col-sm-4">
+                    <div class="icon">
+                      <i class="devicon-github-plain"></i>
+                  </div>
+                    <h5><a href="https://github.com/luissoldevilla/class-tool-rails-api">API</a></h5>
+                  </div>
+
+                  <div class="col-sm-4">
+                    <div class="icon">
+                    <i class="fas fa-globe"></i>
+                  </div>
+                    <h5><a href="https://luissoldevilla.github.io/class-tool-front-end/">Live Site</a></h5>
+                  </div>
+                <!-- </div> -->
+              </div>
+
           </div>
   	    <!-- PORTFOLIO ITEM END -->
         </div><!--/row-->
