Modified the following:
image change, took out section from porfolio
  #	modified:   css/style.css
  #	new file:   img/primarycolor1.png
  #	modified:   index.html
  #	modified:   js/classie.js

--- a/index.html
+++ b/index.html
@@ -75,9 +75,10 @@
                 <div class="col-md-8 col-md-offset-1 inner">
                   <h1 class="animated fadeInDown">
                     L<span style="color:#E04343;">U</span>IS<br/>
-                    <span>S<span style="color:#FFE800">O</span>TO</span>
+                    SOLDEVILLA
+                    <!-- <span>S<span style="color:#FFE800">O</span>LD</span><span style="color:#FFE800">EV</span><span style="color:#E04343;">IL</span>LA -->
                   </h1><!-- Title -->
-                  <h3 class="animated fadeInUp delay-05s"><span class="rotate">Full Stack <br/> Web Developer, Music Producer, Web Designer</span></h3><!-- Text Rotator -->
+                  <h3 class="animated fadeInUp delay-05s"><span>Web Developer</span></h3><!-- Text Rotator -->
                 </div>
               </div>
 			  <!-- Learn More Button -->
@@ -419,9 +420,6 @@
 		<!-- ==========================
         PORTFOLIO SECTION END
         =========================== -->
-
-
-
 
 		<!-- ==========================
         CUSTOM SPACER
