Implemented lastest Resume

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						<a href="index.html#portfolio"><i class="fa fa-fw fa-picture-o"></i><span>Portfolio</span></a>
 						<!-- <a href="index.html#blog"><i class="fa fa-fw fa-rss"></i><span>Blog</span></a> -->
             <a href="index.html#contact"><i class="fa fa-paper-plane"></i><span>Contact</span></a>
-						<a href="./Resume_Luis_Soto.pdf"><i class="fas fa-file-alt"></i><span>Resume</span></a>
+						<a href="./ResumePortfolio.pdf"><i class="fas fa-file-alt"></i><span>Resume</span></a>
 					</div>
 				</nav>
 			    </div>
@@ -428,7 +428,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-12">
-                <a href="./Resume_Luis_Soto.pdf" class="outline-btn">Resume</a>
+                <a href="./ResumePortfolio.pdf" class="outline-btn">Resume</a>
               </div>
             </div>
           </div>
