--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     SOLDEVILLA
                     <!-- <span>S<span style="color:#FFE800">O</span>LD</span><span style="color:#FFE800">EV</span><span style="color:#E04343;">IL</span>LA -->
                   </h1><!-- Title -->
-                  <h3 class="animated fadeInUp delay-05s"><span>Web Developer</span></h3><!-- Text Rotator -->
+                  <h3 class="animated fadeInUp delay-05s"><span>I build with software!</span></h3><!-- Text Rotator -->
                 </div>
               </div>
 			  <!-- Learn More Button -->
